# Phoenix2D

./: .gitignore  AUTHORS  ChangeLog  Controller.py  INSTALL  Makefile.am  Makefile.in  NEWS  Phoenix.json  Phoenix2D.json  README  README.md  aclocal.m4  config.h.in  configs.json  configure  configure.ac  index.html  kill.sh  localization.phx  main.cpp  test.sh  trainer.py
Phoenix2D-agent/: configure.ac
Phoenix2D-base/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
Phoenix2D-base/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
Phoenix2D-base/doc/: Phoenix2DLibrary.doxyfile
Phoenix2D-base/include/: Actions.hpp  Ball.hpp  Command.hpp  Commands.h  Configs.hpp  Connect.hpp  Controller.hpp  Flag.hpp  Game.hpp  Logger.hpp  Parser.hpp  PlayMode.hpp  Player.h  Player.hpp  Position.h  Reader.h  Reader.hpp  Self.hpp  Server.hpp  Trainer.hpp  Vector2D.hpp  World.h  WorldModel.hpp
Phoenix2D-base/src/: Actions.cpp  Ball.cpp  Command.cpp  Commands.cpp  Configs.cpp  Connect.cpp  Controller.cpp  Flag.cpp  Game.cpp  Line.cpp  Logger.cpp  Parser.cpp  PlayMode.cpp  Player.cpp  Position.cpp  Reader.cpp  Self.cpp  Server.cpp  Trainer.cpp  Vector2D.cpp  World.cpp  WorldModel.cpp  mainpage.hpp
Phoenix2D-libs/: configure.ac
Phoenix2D-tests/: main.cpp
ai/: Makefile.am
ai/include/: ai.hpp  before_kick_off.hpp  finish.hpp  setup.hpp
ai/src/: before_kick_off.cpp  finish.cpp  setup.cpp
assets/css/: index.css
assets/js/: index.js
assets/type/: dosis-semibold-demo.html
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
base/: Makefile.am  Makefile.in
base/doc/: Phoenix2DLibrary.doxyfile  doxygen_phoenix.css
base/include/: Actions.hpp  Ball.hpp  Command.hpp  Commands.hpp  Configs.hpp  Connect.hpp  Constants.hpp  Controller.hpp  Flag.hpp  Game.hpp  Logger.hpp  Message.hpp  Messages.hpp  Object.hpp  PFilter.hpp  Parser.hpp  PlayMode.hpp  Player.hpp  Position.hpp  Reader.hpp  Self.hpp  Server.hpp  Trainer.hpp  Vector2D.hpp  World.hpp  WorldModel.hpp  mainpage.hpp
base/phoenix2d-0.1/phoenix2d/: .cproject  .project
base/phoenix2d-0.1/phoenix2d/autom4te.cache/: requests
base/src/: Actions.cpp  Ball.cpp  Command.cpp  Commands.cpp  Configs.cpp  Connect.cpp  Controller.cpp  Flag.cpp  Game.cpp  Logger.cpp  Message.cpp  Messages.cpp  Object.cpp  PFilter.cpp  Parser.cpp  PlayMode.cpp  Player.cpp  Position.cpp  Reader.cpp  Self.cpp  Server.cpp  Trainer.cpp  Vector2D.cpp  World.cpp  WorldModel.cpp
libs/: Makefile.am  Makefile.in
libs/include/: BeforeKickOff.hpp  CornerKickL.hpp  CornerKickR.hpp  FreeKickL.hpp  FreeKickR.hpp  GoalKickL.hpp  GoalKickR.hpp  KickInL.hpp  KickInR.hpp  KickOffL.hpp  KickOffR.hpp  PlayOn.hpp
libs/src/: BeforeKickOff.cpp  CornerKickL.cpp  CornerKickR.cpp  FreeKickL.cpp  FreeKickR.cpp  GoalKickL.cpp  GoalKickR.cpp  KickInL.cpp  KickInR.cpp  KickOffL.cpp  KickOffR.cpp  PlayOn.cpp
tests/: Makefile.am
tests/include/: dribble.hpp  goalie.hpp  localization.hpp  motqm.hpp  tests.hpp  worldtest.hpp
tests/src/: dribble.cpp  goalie.cpp  localization.cpp  motqm.cpp  worldtest.cpp
trainer/: dribble.phx  goal.phx  localization.phx  world.phx
utils/: Makefile.am
utils/include/: FEngine.hpp  FRule.hpp  FVariable.hpp  GAlgorithm.hpp  PFields.hpp  PFilter.hpp  PSO.hpp  constants.hpp  functions.hpp  fuzzy.hpp  geometry.hpp
utils/src/: FEngine.cpp  FRule.cpp  FVariable.cpp  GAlgorithm.cpp
