ACLOCAL_AMFLAGS = -I m4
AC_CONFIG_MACRO_DIR([m4])
lib_LTLIBRARIES = libPhoenixBase-1.0.la
libPhoenixBase_1_0_la_SOURCES = include/Actions.h src/Actions.cpp \
 include/Ball.h src/Ball.cpp include/Command.h src/Command.cpp \
 include/Commands.h src/Commands.cpp include/Config.h src/Config.cpp \
 include/Connect.h src/Connect.cpp include/Controller.h src/Controller.cpp \
 include/Flag.h src/Flag.cpp include/Game.h src/Game.cpp \
 include/Line.h src/Line.cpp include/Logger.h src/Logger.cpp \
 include/Parser.h src/Parser.cpp include/Player.h src/Player.cpp \
 include/PlayMode.h src/PlayMode.cpp include/Position.h src/Position.cpp \
 include/Reader.h src/Reader.cpp include/Self.h src/Self.cpp \
 include/Self.h src/Self.cpp include/Server.h src/Server.cpp \
 include/Trainer.h src/Trainer.cpp include/Vector2D.h src/Vector2D.cpp \
 include/World.h src/World.cpp include/WorldModel.h src/WorldMode.cpp
