ACLOCAL_AMFLAGS = -I m4
#AC_CONFIG_MACRO_DIR([m4])
AM_CPPFLAGS = -Iinclude
lib_LTLIBRARIES = libPhoenixBase-1.0.la
libPhoenixBase_1_0_la_SOURCES = src/Actions.cpp \
	src/Ball.cpp src/Command.cpp \
	src/Commands.cpp src/Configs.cpp \
	src/Connect.cpp src/Controller.cpp \
	src/Flag.cpp src/Game.cpp \
	src/Logger.cpp \
	src/Parser.cpp src/Player.cpp \
	src/PlayMode.cpp src/Position.cpp \
	src/Reader.cpp src/Self.cpp \
	src/Self.cpp src/Server.cpp \
	src/Trainer.cpp src/Vector2D.cpp \
	src/World.cpp src/WorldMode.cpp