AM_CPPFLAGS = -Iinclude -I$(top_builddir)/utils/include
lib_LTLIBRARIES = libPhoenixBase-2.1.la
libPhoenixBase_2_1_la_SOURCES = \
	src/Ball.cpp \
	src/Command.cpp \
	src/Commands.cpp \
	src/Configs.cpp \
	src/Connect.cpp \
	src/Controller.cpp \
	src/Flag.cpp \
	src/Game.cpp \
	src/Logger.cpp \
	src/Message.cpp \
	src/Messages.cpp \
	src/Object.cpp \
	src/Parser.cpp \
	src/Player.cpp \
	src/PlayMode.cpp \
	src/Position.cpp \
	src/Reader.cpp \
	src/Self.cpp \
	src/Server.cpp \
	src/Trainer.cpp \
	src/World.cpp \
	src/WorldModel.cpp