AM_CPPFLAGS = -Iinclude -I$(top_builddir)/base/include
lib_LTLIBRARIES = libPhoenixLibs-1.0.la
libPhoenixLibs_1_0_la_SOURCES = src/BeforeKickOff.cpp \
	src/CornerKickL.cpp src/CornerKickR.cpp \
	src/FreeKickL.cpp src/FreeKickR.cpp \
	src/GoalKickL.cpp src/GoalKickR.cpp \
	src/KickInL.cpp src/KickInR.cpp \
	src/KickOffL.cpp src/KickOffR.cpp \
	src/PlayOn.cpp
libPhoenixLibs_1_0_la_LIBADD = $(top_builddir)/base/libPhoenixBase-1.0.la